--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
     "pyyaml",
     "ray[serve,llm]",
     "streamlit",
-    "vllm",
+    "vllm < 0.15.0",
 ]
 
 [project.optional-dependencies]
