Refactor ETHOS Demo app to enhance scenario handling and history retrieval. Introduced a Scenario enum for better task management, updated sidebar components to utilize scenario descriptions, and improved sample label formatting to include event counts. Enhanced summary generation by linking scenario-specific history functions, ensuring accurate context for EHR summaries.

--- a/src/ethos_demo/prompts/ehr_summary.yaml
+++ b/src/ethos_demo/prompts/ehr_summary.yaml
@@ -3,7 +3,7 @@ system: |
   from Electronic Health Records (EHR).
 
   <TASK>
-  Summarize the patient's health events from the last 24 hours.
+  Summarize the patient's health events from the provided timeline.
   </TASK>
 
   <OBJECTIVE>
