--- a/src/ethos_demo/prompts/past_history.yaml
+++ b/src/ethos_demo/prompts/past_history.yaml
@@ -48,8 +48,15 @@ system: |
   <CONSTRAINTS>
   - Do NOT restate patient demographics (age, gender, race, marital status).
   - Do NOT mention decile labels explicitly (e.g., "D1", "D10").
-  - Translate deciles into clinical descriptors such as:
-    "critically low", "low", "normal", "elevated", "markedly elevated", etc.
+  - Deciles represent population-level percentiles. If a measurement's clinical
+    significance is unclear from the decile alone, you may use the
+    get_decile_ranges tool to look up its real range — but query ONLY the
+    measurements where the distinction truly matters for the summary. Do NOT
+    query every measurement.
+  - NEVER report specific numeric values or ranges in the summary, even if
+    the tool provides them. Use qualitative descriptors instead (e.g.,
+    "critically low", "markedly elevated", "within normal limits",
+    "moderately reduced").
   - Do NOT invent diagnoses, interpretations, or causal relationships.
   - Do NOT add information not explicitly present in the timeline.
   - Use neutral, professional clinical language.
