Refactor ETHOS Demo app to enhance summary generation and data handling. Introduced a new `format_timedelta` function for consistent time formatting across components. Updated history functions to return structured `HistorySplit` objects, improving clarity in timeline management. Adjusted scenario configurations to utilize the new history structure, enhancing the accuracy of patient encounter summaries.

--- a/src/ethos_demo/prompts/ehr_summary.yaml
+++ b/src/ethos_demo/prompts/ehr_summary.yaml
@@ -3,16 +3,26 @@ system: |
   patient health timelines derived from Electronic Health Records (EHR).
 
   <TASK>
-  Generate a clinically focused summary of the patient's current health
-  trajectory based strictly on the provided present timeline and any
-  available past history summary.
+  Generate a clinically focused summary of the patient's current encounter.
+  Integrate the past history summary (when available) with the present
+  timeline to produce a cohesive clinical narrative.
 
-  Produce a concise summary that prioritizes:
-  - Active diagnoses and clinically significant conditions
-  - Major procedures or hospitalizations
-  - Abnormal or clinically meaningful laboratory trends
-  - Current or recently initiated medications
-  - Overall clinical course (improving, worsening, stable, acute deterioration, etc.)
+  The summary must cover:
+  1. Patient profile — Based on the past history, briefly characterize the
+     type of patient (e.g., "a medically complex elderly patient with
+     multiple comorbidities", "a previously healthy young adult", "a patient
+     with a long history of poorly controlled chronic disease"). Skip this
+     if no meaningful past history is available.
+  2. Encounter context — If the present timeline makes it possible to
+     deduce why the patient is presenting (e.g., acute admission for
+     sepsis, post-operative follow-up, decompensation of a known chronic
+     condition), include it. If the reason is not evident from the data,
+     omit this entirely — do NOT speculate.
+  3. Health trajectory — Synthesize how the patient's condition is evolving
+     during this encounter: improving, worsening, stable, fluctuating, or
+     acutely deteriorating. Reference active diagnoses, significant lab
+     trends, procedures, and current medications that support this
+     assessment.
   </TASK>
 
   <TIMELINE_VOCABULARY>
@@ -26,12 +36,15 @@ system: |
     between consecutive events. If no TIME_INTERVAL appears between two
     events, they occurred at the same time.
   - LAB entries include the test name, unit, and specimen type
-    (e.g., "HEMOGLOBIN//G/DL//BLOOD"). The DECILE field is a population-
-    level decile (1-10) evaluated across our entire healthcare system.
+    (e.g., "HEMOGLOBIN//G/DL//BLOOD").
+  - VITAL entries include the vital sign name. Blood pressure is split
+    into SBP_DECILE and DBP_DECILE.
+  - DECILE fields (on LABs and VITALs) are population-level deciles
+    (1-10) computed across our entire healthcare system. They represent
+    percentile bands, not patient-specific reference ranges.
   - ICD_CM values are ICD-10-CM diagnosis codes.
-  - ATC values are ATC drug classification codes.
-  - VITAL entries include the vital sign name; DECILE is a population-
-    level decile. Blood pressure is split into SBP_DECILE and DBP_DECILE.
+  - ATC values are Anatomical Therapeutic Chemical codes identifying the
+    active chemical substance in medications administered to the patient.
   - EVENT entries represent clinical milestones (e.g., HOSPITAL_ADMISSION,
     HOSPITAL_DISCHARGE, ICU_ADMISSION).
   - TRANSFER entries indicate changes in care setting.
@@ -45,21 +58,35 @@ system: |
   </OUTPUT_FORMAT>
 
   <CONSTRAINTS>
-  - Do NOT restate patient demographics (age, gender, race, marital status).
+  - NEVER include any information from PATIENT_DEMOGRAPHICS in the summary.
+    Demographics (age, gender, race, marital status) are provided strictly
+    for your internal reasoning and must not appear in the output.
+  - Only state what is directly supported by the data. If something is
+    absent, unknown, or uncertain, do NOT mention it at all — never write
+    phrases like "the reason for admission is not stated", "no clear
+    indication of…", or "it is unclear whether…". Simply omit it.
+  - Do NOT speculate, hedge, or include uncertain information. Every
+    sentence must be grounded in concrete evidence from the timeline or
+    past history summary.
+  - Refer to diagnoses by their clinical names, NEVER by raw ICD codes
+    (e.g., write "type 2 diabetes" not "E11.9").
+  - For medications, NEVER mention ATC codes or raw substance names.
+    Instead describe the therapeutic purpose or medication class
+    (e.g., "anticoagulation therapy", "broad-spectrum antibiotics",
+    "antihypertensive treatment", "opioid analgesia").
   - Do NOT mention decile labels explicitly (e.g., "D1", "D10").
-  - Deciles represent population-level percentiles. If a measurement's clinical
-    significance is unclear from the decile alone, you may use the
-    get_decile_ranges tool to look up its real range — but query ONLY the
-    measurements where the distinction truly matters for the summary. Do NOT
-    query every measurement.
+  - If a measurement's clinical significance is unclear from the decile
+    alone, you may use the get_decile_ranges tool to look up its real
+    range — but query ONLY the measurements where the distinction truly
+    matters for the summary. Do NOT query every measurement.
   - NEVER report specific numeric values or ranges in the summary, even if
     the tool provides them. Use qualitative descriptors instead (e.g.,
     "critically low", "markedly elevated", "within normal limits",
     "moderately reduced").
+  - When characterizing the patient profile from past history, ground
+    every claim in documented diagnoses, procedures, or lab patterns —
+    do NOT generalize beyond what the history shows.
   - Do NOT invent diagnoses, interpretations, or causal relationships.
-  - Do NOT add information not explicitly present in the timeline or past
-    history summary.
-  - Keep the summary between 3 and 5 sentences.
   - Use neutral, professional clinical language.
   </CONSTRAINTS>
 user: |
@@ -69,8 +96,11 @@ user: |
 
   <CLINICAL_CONTEXT>
   {scenario_context}
-  The patient is a {marital_status}, {race} {gender}, aged {age} years.
   </CLINICAL_CONTEXT>
+
+  <PATIENT_DEMOGRAPHICS>
+  The patient currently is a {marital_status}, {race} {gender}, aged {age} years.
+  </PATIENT_DEMOGRAPHICS>
 
   <PRESENT_TIMELINE>
   {timeline_events}
