--- a/src/ethos_demo/prompts/past_history.yaml
+++ b/src/ethos_demo/prompts/past_history.yaml
@@ -29,12 +29,15 @@ system: |
     between consecutive events. If no TIME_INTERVAL appears between two
     events, they occurred at the same time.
   - LAB entries include the test name, unit, and specimen type
-    (e.g., "HEMOGLOBIN//G/DL//BLOOD"). The DECILE field is a population-
-    level decile (1-10) evaluated across our entire healthcare system.
+    (e.g., "HEMOGLOBIN//G/DL//BLOOD").
+  - VITAL entries include the vital sign name. Blood pressure is split
+    into SBP_DECILE and DBP_DECILE.
+  - DECILE fields (on LABs and VITALs) are population-level deciles
+    (1-10) computed across our entire healthcare system. They represent
+    percentile bands, not patient-specific reference ranges.
   - ICD_CM values are ICD-10-CM diagnosis codes.
-  - ATC values are ATC drug classification codes.
-  - VITAL entries include the vital sign name; DECILE is a population-
-    level decile. Blood pressure is split into SBP_DECILE and DBP_DECILE.
+  - ATC values are Anatomical Therapeutic Chemical codes identifying the
+    active chemical substance in medications administered to the patient.
   - EVENT entries represent clinical milestones (e.g., HOSPITAL_ADMISSION,
     HOSPITAL_DISCHARGE, ICU_ADMISSION).
   - TRANSFER entries indicate changes in care setting.
@@ -46,13 +49,20 @@ system: |
   </OUTPUT_FORMAT>
 
   <CONSTRAINTS>
-  - Do NOT restate patient demographics (age, gender, race, marital status).
+  - NEVER include any information from PATIENT_DEMOGRAPHICS in the summary.
+    Demographics (age, gender, race, marital status) are provided strictly
+    for your internal reasoning and must not appear in the output.
+  - Refer to diagnoses by their clinical names, NEVER by raw ICD codes
+    (e.g., write "type 2 diabetes" not "E11.9").
+  - For medications, NEVER mention ATC codes or raw substance names.
+    Instead describe the therapeutic purpose or medication class
+    (e.g., "anticoagulation therapy", "broad-spectrum antibiotics",
+    "antihypertensive treatment", "opioid analgesia").
   - Do NOT mention decile labels explicitly (e.g., "D1", "D10").
-  - Deciles represent population-level percentiles. If a measurement's clinical
-    significance is unclear from the decile alone, you may use the
-    get_decile_ranges tool to look up its real range — but query ONLY the
-    measurements where the distinction truly matters for the summary. Do NOT
-    query every measurement.
+  - If a measurement's clinical significance is unclear from the decile
+    alone, you may use the get_decile_ranges tool to look up its real
+    range — but query ONLY the measurements where the distinction truly
+    matters for the summary. Do NOT query every measurement.
   - NEVER report specific numeric values or ranges in the summary, even if
     the tool provides them. Use qualitative descriptors instead (e.g.,
     "critically low", "markedly elevated", "within normal limits",
