Refactor summary generation in ETHOS Demo app to support asynchronous token formatting and improve extraction of summaries. Introduced `format_tokens_as_dicts_async` for non-blocking processing of tokens, and updated the `SummaryGenerator` to utilize this new function. Enhanced summary extraction logic to handle content wrapped in `<SUMMARY>` tags, ensuring cleaner output. Adjusted prompt formats to reflect new output requirements for coherent summaries.

--- a/src/ethos_demo/prompts/ehr_summary.yaml
+++ b/src/ethos_demo/prompts/ehr_summary.yaml
@@ -51,10 +51,9 @@ system: |
   </TIMELINE_VOCABULARY>
 
   <OUTPUT_FORMAT>
-  - Output a single coherent paragraph (3-5 sentences).
-  - No bullet points.
-  - No headings.
-  - No commentary outside the summary.
+  - Wrap your summary inside <SUMMARY>...</SUMMARY> tags.
+  - Output a single coherent paragraph (3-6 sentences).
+  - No bullet points, no headings, no commentary outside the tags.
   </OUTPUT_FORMAT>
 
   <CONSTRAINTS>
