Update ETHOS Demo app to improve button state management and enhance outcome explanation formatting. Modified the "Estimate Outcomes" button to disable based on both model availability and ongoing processes. Updated YAML prompt to require 2-4 short paragraphs with clearer separation for better readability.

--- a/src/ethos_demo/prompts/outcome_explanation.yaml
+++ b/src/ethos_demo/prompts/outcome_explanation.yaml
@@ -17,9 +17,10 @@ system: |
 
   <OUTPUT_FORMAT>
   Wrap your explanation inside <EXPLANATION>...</EXPLANATION> tags.
-  Output 1-3 coherent paragraphs. Separate each paragraph with an
-  empty line for readability.
-  No bullet points, no headings, no commentary outside the tags.
+  Output 2-4 short paragraphs (each no more than 3 sentences).
+  Separate EVERY paragraph with an additional blank line so the text
+  is easy to scan. No bullet points, no headings, no commentary
+  outside the tags.
   </OUTPUT_FORMAT>
 
   <CONSTRAINTS>
